Fix spacing on stories lists

--- a/modules/Stories/LoadMore.module.scss
+++ b/modules/Stories/LoadMore.module.scss
@@ -5,7 +5,7 @@
     @include text-label;
 
     display: block;
-    margin: $spacing-8 auto $spacing-9;
+    margin: $spacing-8 auto 0;
     background: $color-base-white;
     outline: none !important;
     box-shadow: none !important;
